created infinite scroll and photo page

--- a/src/Components/Photo/PhotoContent.module.css
+++ b/src/Components/Photo/PhotoContent.module.css
@@ -12,6 +12,11 @@
   animation: scaleUp .3s forwards
 }
 
+.single.photo{
+  grid-template-columns: 1fr;
+  height: auto;
+}
+
 @keyframes scaleUp{
   to{
     opacity: 1;
@@ -27,6 +32,16 @@
 
 .img{
   grid-row: 1/4;
+}
+
+.single .details{
+  padding: 1rem 0 0 0;
+}
+
+.single .img{
+  grid-row: 1;
+  border-radius: .4rem ;
+  overflow: hidden;
 }
 
 .comments{
